--- a/app/views/elements/index.html.erb
+++ b/app/views/elements/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Elements#index</h1>
-<p>Find me in app/views/elements/index.html.erb</p>
+
+<h1>Adding length of sequence and sequence</h1>
+<p>Input sequence of positive integers separated by space</p>
+<%= form_with url: 'elements/result', id:'form', class: 'form-control', style: 'width: 60%;', method: :get do |form| %>
+  <%= form.label :len, 'Length' %>
+  <%= form.number_field :length, class: 'form-control' %>
+  <%= form.label :str, 'Sequence' %>
+  <%= form.text_field :str_arr, class: 'form-control' %>
+  <div class='form-check', style = 'margin: 5px;'>
+    <%= form.radio_button :mode, 'xml', id: 'flexRadioDefault1' %> XML
+    <%= form.radio_button :mode, 'html' , id: 'flexRadioDefault2' %> HTML
+    <%= form.radio_button :mode, 'server' , id: 'flexRadioDefault3' %> SERVER
+</div>
+  <%= form.submit 'Show', class: 'btn btn-primary' %>
+<% end %>
