--- a/app/views/elements/index.html.erb
+++ b/app/views/elements/index.html.erb
@@ -1,7 +1,7 @@
 
 <h1>Adding length of sequence and sequence</h1>
 <p>Input sequence of positive integers separated by space</p>
-<%= form_with url: 'elements/result', id:'form', class: 'form-control', style: 'width: 60%;', method: :get do |form| %>
+<%= form_with url: 'elements/result', id:'form', class: 'form-control', style: 'width: 60%;', data: {turbo: false}, method: :get do |form| %>
   <%= form.label :len, 'Length' %>
   <%= form.number_field :length, class: 'form-control' %>
   <%= form.label :str, 'Sequence' %>
@@ -9,7 +9,6 @@
   <div class='form-check', style = 'margin: 5px;'>
     <%= form.radio_button :mode, 'xml', id: 'flexRadioDefault1' %> XML
     <%= form.radio_button :mode, 'html' , id: 'flexRadioDefault2' %> HTML
-    <%= form.radio_button :mode, 'server' , id: 'flexRadioDefault3' %> SERVER
-</div>
+  </div>
   <%= form.submit 'Show', class: 'btn btn-primary' %>
 <% end %>
